--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,6 +100,9 @@
   --x-logo-filter: invert(1);
 
 }
+html {
+  overflow-y: scroll;
+}
 
 .x-logo {
   filter: var(--x-logo-filter);
@@ -200,6 +203,15 @@
   background-color: #000000 !important;
   border-bottom: 2px solid var(--doom-primary);
   border-top: 2px solid var(--doom-primary);
+}
+
+body {
+  padding-right: 0 !important;
+  overflow-y: scroll !important;
+}
+
+.dropdown-open {
+  margin-right: 0 !important;
 }
 
 .dark {
